2006-04-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added Erlend's
	tabs and banjo doc patch.  Thanks!

2006-04-17  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-grobs.scm: fix stem-attachment for tablature note heads.

	* ps/music-drawing-routines.ps (draw_dashed_line): fix dash pattern bug.

2006-04-16  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/engraver.ly: Remove obsolete comments.

	* ly/gregorian-init.ly: Define default layout block.

	* input/puer-fragment.ly: Updated and extended.

2006-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-parser-scheme.cc: Use them to fix --output=DIR/BASE
	pdf conversion behaviour.

	* flower/file-name.cc (dir_name)
	(get_working_directory): Move from relocate.cc.

	* lily/relocate.cc (setup_paths): Remove rogue stat calls.
	
	* lily/relocate.cc: Encapsulate sys/stat.h in
	HAVE_STAT_H.

2006-04-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: small updates from Cameron
	and Juergen, thanks!

	* Documentation/user/ various: small updates of my own.

	* THANKS: 2.7 -> 2.8.

2006-04-11  Graham Percival  <gpermus@gmail.com>

	* scm/define-context-properties.scm: typo.

	* Documentation/user/ : many more small updates.

2006-04-13  Jürgen Reuter  <reuter@ipd.uka.de>

	* scm/define-music-types.scm: disposed "docme".

2006-04-11  Erlend Aasland  <erlenda@gmail.com>

	* lily/hairpin.cc: make niente circles a bit smaller.

2006-04-10  Erlend Aasland  <erlenda@gmail.com>

	* mf/GNUmakefile: remove redundant mftrace check. Also remove
	get-pfa and get-*-fonts targets.

2006-04-10  Graham Percival  <gpermus@gmail.com>

	* THANKS, Documentation/user/ basic-notation, advanced-notation,
	music-glossary, programming-interface: more minor fixes
	from mailist.

	* scm/define-grob-properties.scm: clarified direction, thanks Mats!

	* scm/define-context-properties.scm: another old \property update.
	This time tested for compiling!
